--- a/B1.html
+++ b/B1.html
@@ -29,7 +29,7 @@
         .navbar a {
             float: right;/* يجعل الرابط يظهر في الجانب الايمن*/
             display: block;/**/
-            color: #f2f2f2;/**/
+            color: #000000;/**/
             text-align: center;/**/
             padding: 14px 16px;/*اضافه تباعد حول النص*/
             text-decoration: none;/*ازاله الخط السفلي من الروابط*/
